<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="5dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_user"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/car"/>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/ll_car_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

<!--    Возможно стоит будет добавить маленькие TextView с обозначениями, что есть что    -->
        <TextView
            android:id="@+id/tv_car_brand"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/brand"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_car_model"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/model"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_car_state_number"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/state_number"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_car_color"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/color"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_model_number"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/modelNumber"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_engine_number"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/engineNumber"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_engine_type"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/engineType"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_transmission"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/transmission"
            android:textAlignment="center"
            android:textSize="16sp"/>

    </LinearLayout>

</LinearLayout>