<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.varenie.carservice.Fragments.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.varenie.carservice.Fragments.ServiceFragment"
        android:label="@string/title_service"
        tools:layout="@layout/fragment_service" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.varenie.carservice.Fragments.CarsFragment"
        android:label="@string/title_cars"
        tools:layout="@layout/fragment_cars" />
</navigation>