<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ServiceFragment">

<!--  Блок инфы  -->
    <LinearLayout
        android:id="@+id/ll_service_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/iv_user"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/service"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/STO"
            android:textSize="16sp"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/address"
            android:textSize="16sp"
            android:layout_margin="10dp"/>

<!--    Переход на карту    -->
        <TextView
            android:id="@+id/tv_go_to_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:text="@string/goToMap"
            android:textStyle="italic"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_worktime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/worktime"
            android:textSize="16sp"
            android:layout_margin="10dp"/>
    </LinearLayout>

<!--  Блок с кнопочками  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_service_info"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_workers"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:text="@string/workers"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/btn_services"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:text="@string/services"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/btn_go_to_service"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:text="@string/goToService"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</RelativeLayout>