<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--   Возможно стоит пересмотреть макс количесвто символов     -->
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/met_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            app:met_floatingLabel="normal"
            app:met_singleLineEllipsis="true"
            android:maxLength="30"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/met_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:textSize="20sp"
            android:inputType="text"
            app:met_floatingLabel="normal"
            app:met_singleLineEllipsis="true"
            app:met_maxCharacters="15"
            android:maxLength="15"/>

        <!--   Возможно стоит пересмотреть макс количесвто символов     -->
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/met_FIO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/FIO"
            android:textSize="20sp"
            android:inputType="text"
            app:met_floatingLabel="normal"
            app:met_singleLineEllipsis="true"
            android:maxLength="50"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/met_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:textSize="20sp"
            android:inputType="phone"
            app:met_floatingLabel="normal"
            app:met_singleLineEllipsis="true"
            android:maxLength="12"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/met_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:textSize="20sp"
            android:inputType="textPassword"
            app:met_floatingLabel="normal"
            app:met_singleLineEllipsis="true"
            app:met_minCharacters="5"
            app:met_maxCharacters="15"
            android:maxLength="15"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/met_pass_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass_confirm"
            android:textSize="20sp"
            android:inputType="textPassword"
            app:met_floatingLabel="normal"
            app:met_singleLineEllipsis="true"
            app:met_minCharacters="5"
            app:met_maxCharacters="15"
            android:maxLength="15"/>


    </LinearLayout>
</androidx.cardview.widget.CardView>