<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegistrationActivity"
    android:padding="5dp">

    <LinearLayout
        android:id="@+id/ll_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="0.8"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_fio_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/FIO"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textSize="16sp"
                android:maxLines="1"
                android:maxLength="45"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:maxLength="45"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_phone_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:inputType="phone"
                android:maxLines="1"
                android:maxLength="11"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_pass_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            app:errorEnabled="true"
            app:endIconMode="password_toggle"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:helperTextEnabled="true"
            app:helperText="@string/pass_info">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:maxLength="15"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_confirm_pass_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass_confirm"
            app:errorEnabled="true"
            app:endIconMode="password_toggle"
            app:counterEnabled="true"
            app:counterMaxLength="15">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:maxLength="15"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="0.2"
        android:layout_below="@+id/ll_reg"
        android:layout_marginTop="130dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/confirm"
            android:gravity="center"/>
    </LinearLayout>

</RelativeLayout>