<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/iv_user"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/car"/>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_acc_car_brand"
            android:layout_width="100dp"
            android:text="@string/brand"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/tv_acc_car_number"
            android:layout_width="100dp"
            android:text="@string/state_number"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>

<!--    не уверен, что нужное поле    -->
        <TextView
            android:id="@+id/tv_is_in_service"
            android:layout_width="100dp"
            android:text="@string/isService"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>
    </LinearLayout>

</LinearLayout>