<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_service_name"
            android:layout_width="300dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/ServiceName"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/tv_service_description"
            android:layout_width="300dp"
            android:text="@string/description"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/tv_service_price"
            android:layout_width="300dp"
            android:text="@string/ServicePrice"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/ibtn_star"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:layout_weight="0.1"
        android:layout_margin="5dp"
        android:src="@drawable/star" />

</LinearLayout>