<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingDefaultResource"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/iv_user"
                android:layout_width="100dp"
                android:layout_height="100dp" />

        </androidx.cardview.widget.CardView>

<!--    Стоит подумать, над тем, что еще тут можно показывать, а то инфу о себе пользователь, думаю знает     -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_user_email"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/tv_user_fio"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/FIO"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_user_phone"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>